--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div class="background shadow-2 flex overflow-hidden">
+      <!-- Major Component Candidate N#1: Aside Bar-->
       <aside class="p3 menuWidth overflow-auto">
         <p class="h2 greyBlue">⚡️ 1.4kW</p>
         <p class="darkgray mb2">Power draw</p>
@@ -19,8 +20,10 @@
         <p class="darkgray mb2">Solar power production</p>
         <p class="h2 greyBlue">🔌️ 4.4kW</p>
         <p class="darkgray mb2">Fed into grid</p>
+        <!-- Major Component Candidate N#3 Devices List-->
         <section class="h5 darkgray mb2">
           <h4 class="h4 mb1">Your devices:</h4>
+          <!-- Repetable Component Candidate N#1 Device-->
           <div class="shadow-2 roundedMore bg-super-light-grey mb1">
             <p class="darkgray pl2 pt1 pb1">Air conditioner</p>
             <p class="h5 darkgray bold pl2 pb1 pt1 bg-very-light-grey">
@@ -59,24 +62,12 @@
           </div>
         </section>
       </aside>
+      <!-- Major Component Candidate N#2 Energy Consumption Graphic-->
       <article class="bg-very-light-grey p3 flex-auto overflow-auto">
         <h1 class="regular darkgray line-height-1 mb3">Energy consumption</h1>
         <section class="mb3">
           <button
-            class="
-              h5
-              inline-block
-              shadow-2
-              pl2
-              pr2
-              pt1
-              pb1
-              roundedMore
-              border-grey
-              bg-blue
-              white
-              bold
-            "
+            class="h5 inline-block shadow-2 pl2 pr2 pt1 pb1 roundedMore border-grey bg-blue white bold"
           >
             Last 30 days
           </button>
