--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="JOI Energy" />
-    <link rel="stylesheet" href="./src/css/index.css" />
-    <link rel="stylesheet" href="./src/css/basscss.css" />
-    <script src="./src/index.js" type="module"></script>
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/basscss.css" />
+    <script src="./dist/index.js" type="module"></script>
     <title>JOI Energy</title>
   </head>
   <body>
